--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "author": "anke <245783065@qq.com>",
   "private": true,
+  "homepage": "https://weianke.github.io/vueTravel/",
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
